<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">SmartHome</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">欢迎使用!</string>
    <string name="title_activity_register">RegisterActivity</string>
    <string name="title_activity_setup_dev">SetupDevActivity</string>
    <string name="title_activity_dev_view">DevViewActivity</string>
    <string name="app_version">v0.3.0</string>
    <string name="tvApSsidTitle">SSID: </string>
    <string name="tvPasswordTitle">Password: </string>
    <string name="switchIsSsidHiddenTitle">SSID is Hidden</string>
    <string name="btnConfirmTitle">Confirm</string>
    <string name="btnOpenLed">开灯</string>
    <string name="btnCloseLed">关灯</string>
    <string name="btnFlashLed">闪灯</string>
    
    <string name="btnOpenBeeper">开蜂鸣器</string>
    <string name="btnCloseBeeper">关蜂鸣器</string>
    <string name="btnFlashBeeper">蜂鸣器响</string>
    
    <string name="btnQRCode">二维码扫描</string>
    <string name="btnGetID">配置ID</string>
    <string name="qr_code_tips">将二维码放入框内，即刻自动扫描</string>
    <string name="cancel">取消</string>
    <string name="scan_name_hint">  请输入 ID 号码</string>
</resources>