<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="match_parent"
    android:layout_marginLeft="0dp"
    android:layout_marginTop="0dp"
    android:orientation="vertical" >

    <!-- title -->

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="60dp"
        android:layout_gravity="center_vertical|center_horizontal"
        android:layout_marginLeft="0dp"
        android:layout_marginTop="0dp"
        android:background="#4173A8"
        android:orientation="horizontal" >

        <FrameLayout
            android:layout_width="fill_parent"
            android:layout_height="60dp" >

            <TextView
                android:id="@+id/titleDevView"
                android:layout_width="20dp"
                android:layout_height="35dp"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="12dp"
                android:background="@drawable/control2_03" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|center_horizontal"
                android:text="控 制"
                android:textColor="#FFFFFF"
                android:textSize="25sp" />
        </FrameLayout>
    </LinearLayout>


   <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/btnOpenLed"
            style="@style/SP_ButtonBlueSmall"
            android:layout_weight="1"
            android:text="@string/btnOpenLed"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/btnCloseLed"
            style="@style/SP_ButtonBlueSmall"
            android:layout_weight="1"
            android:text="@string/btnCloseLed"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/btnFlashLed"
            style="@style/SP_ButtonBlueSmall"
            android:layout_weight="1"
            android:text="@string/btnFlashLed"
            android:textColor="@color/white" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/btnOpenBeeper"
            style="@style/SP_ButtonBlueSmall"
            android:layout_weight="1"
            android:text="@string/btnOpenBeeper"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/btnCloseBeeper"
            style="@style/SP_ButtonBlueSmall"
            android:layout_weight="1"
            android:text="@string/btnCloseBeeper"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/btnFlashBeeper"
            style="@style/SP_ButtonBlueSmall"
            android:layout_weight="1"
            android:text="@string/btnFlashBeeper"
            android:textColor="@color/white" />
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="接收字符串" />

    <!-- 接收字符串 -->

    <ListView
        android:id="@+id/listMessage"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" >
    </ListView>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="发送字符串" />

    <!-- 发送字符串 -->

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <EditText
            android:id="@+id/editSendString"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="发送字符串"
            android:selectAllOnFocus="true" />

        <Button
            android:id="@+id/btnSendString"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="发送" />
    </LinearLayout>

</LinearLayout>